objects/EUR_CRM_Fair_Share_Comparison_Audit__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>EUR_CRM_Category__c</referenceTo>
        <relationshipLabel>Fair Share Comparison Audits (EU)</relationshipLabel>
        <relationshipName>Fair_Share_Comparison_Audits_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Facing_to_Go_F__c</fullName>
        <formula>IF(
EUR_CRM_Total_No_of_competitor_Facing__c  *  (EUR_CRM_PR_Target__c /(1- EUR_CRM_PR_Target__c))- EUR_CRM_Total_No_of_PR_Facings__c  &lt; 0, 0,
EUR_CRM_Total_No_of_competitor_Facing__c  *  (EUR_CRM_PR_Target__c /(1- EUR_CRM_PR_Target__c))- EUR_CRM_Total_No_of_PR_Facings__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facing to Go</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Facings_to_Go__c</fullName>
        <label>Facings to Go</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Merchandising_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merchandising Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mobile_ID__c</fullName>
        <description>technical field represents Mobile ID from Convivio. Use for checking for data duplication</description>
        <label>Mobile ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_of_PR_Facings__c</fullName>
        <label>No. of PR Facings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PR_Actual_F__c</fullName>
        <formula>EUR_CRM_Total_No_of_PR_Facings__c / ( EUR_CRM_Total_No_of_competitor_Facing__c +  EUR_CRM_Total_No_of_PR_Facings__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PR Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PR_Actual__c</fullName>
        <label>PR Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PR_Target__c</fullName>
        <label>PR Target %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_No_of_PR_Facings__c</fullName>
        <label>Total No of PR Facings</label>
        <summarizedField>EUR_CRM_Fair_Share_Audit_Item__c.EUR_CRM_No_of_Facings__c</summarizedField>
        <summaryForeignKey>EUR_CRM_Fair_Share_Audit_Item__c.EUR_CRM_Fair_Share_Comparison_Audit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_No_of_competitor_Facing__c</fullName>
        <label>Total No of competitor Facing </label>
        <summarizedField>EUR_CRM_Fair_Share_Audit_Item__c.EUR_CRM_No_of_competitor_Facings__c</summarizedField>
        <summaryForeignKey>EUR_CRM_Fair_Share_Audit_Item__c.EUR_CRM_Fair_Share_Comparison_Audit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_RU_Fair_Share_Audit__c</fullName>
        <label>Fair Share Audit</label>
        <referenceTo>EUR_CRM_Fair_Share_Audit__c</referenceTo>
        <relationshipLabel>Fair Share Comparison Audits (EU)</relationshipLabel>
        <relationshipName>Fair_Share_Comparison_Audits_EU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Fair Share Comparison Audit (EU)</label>
    <nameField>
        <displayFormat>FSCA-{0000000000}</displayFormat>
        <label>Fair Share Comparison Audit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fair Share Comparison Audits (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_Fair_Share_Comparison_Audit</fullName>
        <active>true</active>
        <label>EUR BE Fair Share Comparison Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Fair_Share_Comparison_Audit</fullName>
        <active>true</active>
        <label>EUR PT Fair Share Comparison Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Fair_Share_Comparison_Audit</fullName>
        <active>true</active>
        <label>EUR RU Fair Share Comparison Audit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>